--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 dominate==2.5.2
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-CKEditor==0.4.4.1
@@ -21,4 +22,3 @@ urllib3==1.25.10
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
-wtforms[email]==2.3.1
